--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# ...existing code...
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.0+cpu
 torchvision==0.19.1+cpu
@@ -12,6 +13,7 @@ google-auth
 google-auth-oauthlib
 joblib
 matplotlib
+# ...existing code...
 
 
 
