--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-# ...existing code...
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.2.0+cpu
-torchvision==0.19.1+cpu
-pillow
-numpy
-streamlit
-pandas
-scikit-learn
-xgboost
-gspread
-google-auth
-google-auth-oauthlib
-joblib
-matplotlib
-# ...existing code...
+# requirements_app.txt
+streamlit==1.37.1
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+scikit-learn==1.3.2
+xgboost==2.0.3
+openpyxl==3.1.5
+gspread==6.1.2
+google-auth==2.34.0
+joblib==1.3.2
 
 
 
