--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 streamlit==1.37.1
 pandas==2.2.2
+scikit-learn==1.5.2
 numpy==1.26.4
-matplotlib==3.8.4
-scikit-learn==1.4.2
-xgboost==2.1.1
-openpyxl==3.1.5
-gspread==6.1.2
-google-auth==2.34.0
+scipy==1.13.1
 joblib==1.4.2
-
+matplotlib==3.9.2
+xgboost==2.1.2
+gspread==6.0.2
+google-auth==2.35.0
 
 
 
